fix(blog-feed): small fix mobile alignment

--- a/components/blog-feed/blog-feed.less
+++ b/components/blog-feed/blog-feed.less
@@ -8,7 +8,6 @@
 	@media @screen-small {
 		width: 50%;	
 		padding-right: 10px;
-		
 	}
 }
 
@@ -35,7 +34,7 @@
 	color: @white;
 	text-align: left;
 	height: 100%;
-	max-height: 150px;
+	max-height: 170px;
 	background: @green;
 
 	& > h3 {
@@ -82,7 +81,7 @@
 .blog-feed-footer-container {
 	position: relative;
 	width: 100%;
-	height: 75px;
+	height: 45px;
 	text-align: left;
 	
 	& > button {
